# loan_status_prediction

./: Loan Status Prediction (ML1 Project).pptx  README.md  app.py  final report.docx  final_model.pkl  model_ran_for.pkl  pyproject.toml
templates/: bootstrap_css.html  bootstrap_js.html  form.html  home.html  lottie_script.html  nav.html  prediction.html  prediction_no.html  prediction_yes.html
